docs/api/qiskit-ibm-transpiler/0.9/ai-ai-linear-function-synthesis.mdx
---
title: AILinearFunctionSynthesis (v0.9)
description: API reference for qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis in qiskit-ibm-transpiler v0.9
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis
---

# AILinearFunctionSynthesis

<Class id="qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.9/qiskit_ibm_transpiler/ai/synthesis.py#L260-L310" signature="qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis(backend_name: str, replace_only_if_better: bool = True, max_threads: int | None = None)" modifiers="class">
  Bases: `AISynthesis`

  Synthesis for Linear Function circuits (blocks of CX and SWAP gates). Currently up to 9 qubit blocks.

  **Parameters**

  *   **backend\_name** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)")) – Name of the backend used for doing the AI Linear Function synthesis.
  *   **replace\_only\_if\_better** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.13)")*, optional*) – Determine if replace the original circuit with the synthesized one if it’s better, defaults to True.
  *   **max\_threads** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")*, optional*) – Set the number of requests to send in parallel.

  ## Attributes

  ### is\_analysis\_pass

  <Attribute id="qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis.is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Attribute>

  ### is\_transformation\_pass

  <Attribute id="qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis.is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Attribute>

  ## Methods

  ### execute

  <Function id="qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis.execute" signature="execute(passmanager_ir, state, callback=None)">
    Execute optimization task for input Qiskit IR.

    **Parameters**

    *   **passmanager\_ir** ([*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)")) – Qiskit IR to optimize.
    *   **state** ([*PassManagerState*](/docs/api/qiskit/qiskit.passmanager.PassManagerState "(in Qiskit v1.3)")) – State associated with workflow execution by the pass manager itself.
    *   **callback** ([*Callable*](https://docs.python.org/3/library/collections.abc.html#collections.abc.Callable "(in Python v3.13)")) – A callback function which is caller per execution of optimization task.

    **Returns**

    Optimized Qiskit IR and state of the workflow.

    **Return type**

    [tuple](https://docs.python.org/3/library/stdtypes.html#tuple "(in Python v3.13)")\[[*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)"), [*PassManagerState*](/docs/api/qiskit/qiskit.passmanager.PassManagerState "(in Qiskit v1.3)")]
  </Function>

  ### name

  <Function id="qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis.name" signature="name()">
    Name of the pass.

    **Return type**

    [str](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)")
  </Function>

  ### run

  <Function id="qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis.run" github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.9/qiskit_ibm_transpiler/ai/synthesis.py#L186-L203" signature="run(dag)">
    Run a pass on the DAGCircuit. This is implemented by the pass developer.

    **Parameters**

    **dag** (*DAGCircuit*) – the dag on which the pass is run.

    **Raises**

    [**NotImplementedError**](https://docs.python.org/3/library/exceptions.html#NotImplementedError "(in Python v3.13)") – when this is left unimplemented for a pass.
  </Function>

  ### synth\_nodes

  <Function id="qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis.synth_nodes" github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.9/qiskit_ibm_transpiler/ai/synthesis.py#L139-L184" signature="synth_nodes(nodes)" />

  ### update\_status

  <Function id="qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis.update_status" signature="update_status(state, run_state)">
    Update workflow status.

    **Parameters**

    *   **state** ([*PassManagerState*](/docs/api/qiskit/qiskit.passmanager.PassManagerState "(in Qiskit v1.3)")) – Pass manager state to update.
    *   **run\_state** (*RunState*) – Completion status of current task.

    **Returns**

    Updated pass manager state.

    **Return type**

    [*PassManagerState*](/docs/api/qiskit/qiskit.passmanager.PassManagerState "(in Qiskit v1.3)")
  </Function>
</Class>

